Made WPDS work. 2 test fails remaining